--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "vite build"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +21,5 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
-    "vite": "^4.x.x"
   }
 }
